# NETAI-LLM-Integration-Chatbot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: api-reference.md  architecture.md  deployment.md
helm/netai-chatbot/: Chart.yaml  values.yaml
helm/netai-chatbot/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: configmap.yaml  deployment.yaml  gpu-inference.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
src/netai_chatbot/: __init__.py  config.py  main.py
src/netai_chatbot/api/: middleware.py
src/netai_chatbot/api/models/: chat.py  telemetry.py
src/netai_chatbot/api/routes/: chat.py  health.py  telemetry.py
src/netai_chatbot/context/: __init__.py  manager.py
src/netai_chatbot/diagnostics/: __init__.py  anomaly.py  perfsonar.py  telemetry.py  traceroute.py
src/netai_chatbot/llm/: __init__.py  client.py  prompt_engine.py  providers.py
src/netai_chatbot/utils/: __init__.py
static/: index.html
static/css/: style.css
static/js/: chat.js
tests/: __init__.py  conftest.py
tests/test_api/: test_chat.py  test_health.py  test_telemetry.py
tests/test_context/: __init__.py  test_manager.py
tests/test_diagnostics/: __init__.py  test_perfsonar.py  test_traceroute.py
tests/test_llm/: test_client.py  test_prompt_engine.py
